# dashboard

./: .env  .gitignore  README.md  api.yml  makefile
backend/: Cargo.toml  build.rs
backend/proto/: secret_service.proto
backend/src/: main.rs  state.rs  updater.rs
backend/src/api/: cache.rs  common.rs  cookie.rs  handler.rs  helper.rs  mod.rs  routes.rs  secret.rs
backend/src/auth/: token.rs
backend/src/database/: connection.rs
backend/src/grpc/: mod.rs
dashboard/: dashboard.service
dashboard/static/: 404.html  account.html  apps.html  billing.html  index.html  secrets.html  vms.html
dashboard/static/apps/: [id].html
frontend/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/components/: header.tsx  loading.tsx
frontend/src/hooks/: useUser.ts
frontend/src/lib/: api.ts  config.ts  logout.ts  types.ts
frontend/src/pages/: _document.tsx  account.tsx  index.tsx
frontend/src/pages/apps/: [id].tsx  index.tsx
frontend/src/pages/billing/: index.tsx
frontend/src/pages/secrets/: index.tsx
frontend/src/pages/vms/: index.tsx
frontend/src/styles/: globals.css
src-tauri/: Cargo.toml  tauri.conf.json
