[package]
name = "artisan_dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9"
hex = "0.4.3"
anyhow = "1.0.98"
dotenv = "0.15.0"
base64 = "0.22.1"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "chrono",
    "offline",
] }
once_cell = "1.20.3"
artisan_middleware = "^5.3.0"
cookie = "0.18.1"
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4.41"
http = "1.3.1"
bytes = "1.10.1"
hyper = "1.6.0"
tonic = { version = "0.11", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"

